--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   node:
     image: "node:16-alpine"
     restart: always
-    user: "node"
+    user: "70"
     working_dir: /home/node/app
     env_file:
       - EDT-Bot.env
