--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "16.x",
-    "npm": "8.x"
+    "node": ">=16.x",
+    "npm": ">=8.x"
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "discord.js": "^13.6.0",
+    "discord.js": "^14.3.0",
     "dotenv": "^16.0.0",
     "https": "^1.0.0",
     "pg": "^8.7.3"
