--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3"
+version: "2"
 services:
   node:
-    image: "node:current-alpine3.15"
+    image: "node:16-alpine"
     restart: always
     working_dir: /home/node/app
     env_file:
