--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=16.x",
+    "node": "16.x",
     "npm": ">=8.x"
   },
   "dependencies": {
